# claude-code-any

./: README.md
claude-code-source-code/: README.anycode.md  README.md  package-lock.json  package.json
claude-code-source-code/pip-package/: LICENSE  README.md  build.sh  pyproject.toml
claude-code-source-code/pip-package/anycode/: __init__.py  cli.py  setup_wizard.py
claude-code-source-code/pip-package/anycode_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
claude-code-source-code/proactive/: useProactive.ts
claude-code-source-code/scripts/: build.mjs
claude-code-source-code/src/: commands.ts  cost-tracker.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingState.ts
claude-code-source-code/src/assistant/: gate.ts  sessionDiscovery.ts
claude-code-source-code/src/bootstrap/: state.ts
claude-code-source-code/src/bridge/: bridgeEnabled.ts  envLessBridgeConfig.ts  peerSessions.js
claude-code-source-code/src/buddy/: companion.ts
claude-code-source-code/src/cli/: bg.ts
claude-code-source-code/src/commands/: force-snip.js  proactive.js  subscribe-pr.js  torch.js
claude-code-source-code/src/components/: ProviderSetup.tsx
claude-code-source-code/src/constants/: prompts.ts  system.ts
claude-code-source-code/src/coordinator/: workerAgent.js
claude-code-source-code/src/entrypoints/: cli.tsx
docs/: 00-项目概览与核心架构.md  01-工具系统架构.md  02-服务层架构.md  03-CLI入口与命令系统.md  04-状态管理与权限系统.md  05-UI组件与渲染系统.md  06-任务与技能插件系统.md  07-工具函数与基础设施.md  08-启动引导与远程通信.md  09-查询引擎与类型系统.md  10-交互模式与记忆系统.md  11-高级功能与原生模块.md  12-构建脚本与外部模块.md  PROGRESS.md
(+96 files in other folders)
