[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anycode-ai"
version = "1.2.2"
description = "Universal coding agent for your terminal — use any OpenAI-compatible LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "coding", "agent", "llm", "openai", "deepseek", "qwen", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
anycode = "anycode.cli:main"
anycode-setup = "anycode.setup_wizard:run_setup"

[project.urls]
Homepage = "https://github.com/anthropics/claude-code"

[tool.setuptools.packages.find]
include = ["anycode*"]

[tool.setuptools.package-data]
anycode = ["bundle/**/*"]
